# transyto

./: .gitignore  .pycodestyle.cfg  AUTHORS.rst  CITATION  CONTRIBUTING.rst  MANIFEST.in  README.rst  pyproject.toml  requirements.txt  setup.py  telescope_keywords.csv
.github/workflows/: docker.yml  transyto-build-test.yml
docker/: Dockerfile  bash-config.sh
scripts/: run_transyto.py
transito/: __init__.py  transito.py  utils.py
transito.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
transyto/: __init__.py  transyto.py  wcs.py
transyto/limbDC/: ldc.py
transyto/noise/: __init__.py
transyto/targets/: swarthmore.py  targets.py  transit_finder.py
transyto/tests/: test_codestyle.py
transyto/utils/: __init__.py  catalog.py  data.py  wcs.py
tutorials/: run_transyto.py
